--- a/style.css
+++ b/style.css
@@ -2870,7 +2870,7 @@ header .main-navigation-container .menu {
         line-height: 1.3;
         border: none; }
       header .main-navigation-container .menu li.current-menu-item, header .main-navigation-container .menu li:hover {
-        background-color: rgba(0, 0, 0, 0.3); }
+        background-color: rgba(0, 0, 0, 0.7); }
         header .main-navigation-container .menu li.current-menu-item > a, header .main-navigation-container .menu li:hover > a {
           color: #fff; }
           header .main-navigation-container .menu li.current-menu-item > a:after, header .main-navigation-container .menu li:hover > a:after {
@@ -2898,7 +2898,8 @@ header .main-navigation-container .menu {
         position: relative; }
         header .main-navigation-container .menu li.menu-item-has-children:hover > ul {
           display: block;
-          background-color: rgba(0, 0, 0, 0.3);
+          background-color: gray;
+          background-color: rgba(0, 0, 0, 0.7);
           position: absolute;
           right: -200px;
           top: 0;
@@ -2934,6 +2935,7 @@ header .main-navigation-container .menu {
   width: 100%;
   text-align: center;
   z-index: 9999;
+  background-color: #191919;
   background-color: rgba(25, 25, 25, 0.95); }
   .side-masthead:before, .side-masthead:after {
     content: " ";
