re-add sidebars, fix small issues

--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -13,6 +13,12 @@
 		padding: 0;
 		max-width: none;
 	}
+
+	body.page-template-page-builder-default-header &{
+		padding: 0;
+		max-width: none;
+	}
+
 }
 
 #primary{
