--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -9,14 +9,14 @@
 		padding: 0;
 	}
 
-	body.page-template-page-builder &{
+	body.page-template-page-builder &,
+	body.page-template-page-builder-no-header &{
 		padding: 0;
 		max-width: none;
-	}
 
-	body.page-template-page-builder-default-header &{
-		padding: 0;
-		max-width: none;
+		@media all and ( min-width: 900px ) {
+			padding-bottom: 0;
+		}
 	}
 
 }
@@ -55,13 +55,8 @@
 		@extend .large-push-6;
 	}
 
-	body.page-template-page-builder &{
-		width: 100%;
-		padding: 0;
-		float: none;
-	}
-
-	body.page-template-page-builder-default-header &{
+	body.page-template-page-builder &,
+	body.page-template-page-builder-no-header &{
 		width: 100%;
 		padding: 0;
 		float: none;
