--- a/.dev/sass/partials/_typography.scss
+++ b/.dev/sass/partials/_typography.scss
@@ -230,7 +230,6 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $primary-font-family;
 	font-weight: $header-font-weight;
 	font-style: $header-font-style;
-	color: $header-font-color;
 	text-rendering: $header-text-rendering;
 	margin-top: $header-top-margin;
 	margin-bottom: $header-bottom-margin;
@@ -240,6 +239,10 @@ h1, h2, h3, h4, h5, h6 {
 		font-size: $small-font-size;
 		color: $small-font-color;
 		line-height: 0;
+	}
+
+	#content &{
+		color: $header-font-color;
 	}
 }
 
