Update to nav default colors.

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -17,7 +17,7 @@ $entry-title-bg: rgba(0,0,0,.6) !default;
 		&,
 		.entry-title,
 		.entry-title a{
-			color: white;
+			color: #999;
 		}
 
 		.entry-header-row{
