--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 @charset "UTF-8";
 /**
  * Theme Name: Escapade
- * Theme URI: https://wordpress.org/themes/escapade/
+ * Theme URI: https://wordpress.org/themes/escapade
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
- * Description: Escapade is a travel-oriented child theme for the Primer theme.
+ * Description: Escapade is a Primer child theme with a unique sidebar navigation.
  * Version: 1.0.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
- * Text Domain: primer
+ * Text Domain: escapade
  * Domain Path: /languages
- * Tags: custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, left-sidebar, one-column, right-sidebar, rtl-language-support, sticky-post, threaded-comments, three-columns, translation-ready, two-columns
  * Template: primer
+ * Tags: custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, left-sidebar, one-column, right-sidebar, rtl-language-support, sticky-post, threaded-comments, three-columns, translation-ready, two-columns
  *
  * This theme, like WordPress, is licensed under the GPL.
  * Use it to make something cool, have fun, and share what you've learned with others.
