--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -13,7 +13,17 @@ $submenu-background-color: rgba(0,0,0,.7);
 
 	#site-navigation {
 		display: none;
+
+    &.open {
+      display: block;
+    }
 	}
+
+  .social-menu {
+
+    display: none;
+
+  }
 
 }
 
