--- a/style.css
+++ b/style.css
@@ -2839,6 +2839,10 @@ a {
 
 @media all and (max-width: 783px) {
   #site-navigation {
+    display: none; }
+    #site-navigation.open {
+      display: block; }
+  .social-menu {
     display: none; } }
 
 header .main-navigation-container .menu {
